--- a/view/login.ejs
+++ b/view/login.ejs
@@ -143,6 +143,7 @@
             />
           </div>
           <div class="mb-3"> 
+          <center> <%- recaptcha %> </center>
         </div>
           <div class="d-grid gap-3 mb-3">
             <input
